[gd_scene load_steps=2 format=3 uid="uid://mc33jv0dr3al"]

[ext_resource type="Script" path="res://scene/UI/command/command.gd" id="1_v2fqg"]

[node name="command" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_v2fqg")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="up_speed" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "upgrade speed"

[node name="up_health" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "upgrade health"

[node name="up_production" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "upgrade production speed"

[node name="build" type="Button" parent="HBoxContainer"]
visible = false
layout_mode = 2
text = "dig hole"
